<resources>
    <string name="app_name">Coding Quizzes</string>
    <string name="wrong">Wrong</string>
    <string name="correct">Correct</string>
    <string name="how_many_constructors_can_a_class_have">How many constructors can a class have?</string>
    <string name="only_one">Only one</string>
    <string name="any_amount">Any amount</string>
    <string name="none">None</string>
    <string name="next">Next</string>
    <string name="which_are_the_main_pillars_of_oop">Which are the main pillars of OOP</string>
    <string name="encapsulation">Encapsulation</string>
    <string name="polymorphism">Polymorphism</string>
    <string name="inheritance">Inheritance</string>
    <string name="abstraction">Abstraction</string>
    <string name="previous">Previous</string>
    <string name="who_s_the_author_of_the_quot_clean_code_quot_book">Who\'s the author of the Clean Code book?</string>
    <string name="clean_code_author_name">Robert Martin</string>
    <string name="author_name">Authro name</string>
    <string name="who_was_the_android_os_named_after">Who was the Android OS named after?</string>
    <string name="name">Name</string>
    <string name="submit">Submit</string>
    <string name="founder_android">Andy Rubin</string>
</resources>
